--- a/volleybbong/templates/hello.html
+++ b/volleybbong/templates/hello.html
@@ -33,10 +33,15 @@
                 url: "/number",
                 data: { month: gameMonthVal },
                 success: function(response) {
-                    alert('경기번호를 불러왔습니다.');
-                    console.log(response);
-                    for(var i=0; i<response.length; i++) {
-                        optionNumber(response[i])
+                    console.log(response)
+                    if(response["result"] == "success") {
+                        alert('경기번호를 불러왔습니다.');
+                        console.log(response["msg"]);
+                        for(var i=0; i<response["msg"].length; i++) {
+                            optionNumber(response["msg"][i])
+                        }
+                    } else {
+                        alert(response["msg"]);
                     }
                 }
             })
@@ -56,7 +61,7 @@
                 data: { month: gameMonthVal, number: gameNumVal },
                 success: function(response) {
                     alert('경기팀을 불러왔습니다.');
-                    console.log(response);
+                    console.log(response)
                     for(var i=0; i<response.length; i++) {
                         optionTeam(response[i])
                     }
@@ -79,7 +84,7 @@
                 data: { month: gameMonthVal, number: gameNumVal, team: gameTeamVal },
                 success: function(response) {
                     alert('선수를 불러왔습니다.');
-                    console.log(response);
+                    console.log(response)
                     for(var i=0; i<response.length; i++) {
                         optionPlayer(response[i])
                     }
@@ -109,7 +114,7 @@
                     },
                 success: function(response) {
                     alert('선수의 기록을 불러왔습니다.');
-                    console.log(response);
+                    console.log(response)
                     $('#result_table tbody').html('');
                     allInfo(
                         response['pt1T_list'], response['pt1F_list'], response['pt1Margin'],
